--- a/src/lib/components/UI/Input/index.scss
+++ b/src/lib/components/UI/Input/index.scss
@@ -18,13 +18,13 @@
         align-items: center;
         position: relative;
         width: 100%;
-        border-radius: 6px;
         color: #28314d;
+        border-color: #DDDD;
 
         .input {
             width: 100%;
             outline: 0;
-            color: #1F2667;
+            color: gray;
             border-radius: inherit;
             border: 1px solid #bbbfc5;
             height: 24px;
